--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -337,7 +337,7 @@
 					},
 					getCats() {
 						superagent
-							.get('/fttc/cats')
+							.get('./fttc/cats')
 							.end((err, res) => {
 								if (err)
 									return this.handleError(err, res);
@@ -346,7 +346,7 @@
 					},
 					getRegions() {
 						superagent
-							.get('/fttc/regions')
+							.get('./fttc/regions')
 							.query(this.query)
 							.end((err, res) => {
 								if (err)
@@ -388,7 +388,7 @@
 						this.isLoading = true;
 						
 						superagent
-							.get('/fttc')
+							.get('./fttc')
 							.query(this.query)
 							.end((err, res) => {
 								if (err)
@@ -419,7 +419,7 @@
 						    onConfirm: () => {
 								this.isBackendFetching = this.query.cat;
 								superagent
-									.get('/fetch')
+									.get('./fetch')
 									.query(this.query)
 									.end((err, res) => {
 										if (err)
@@ -450,7 +450,7 @@
 		                    icon: 'exclamation-circle',
 		                    iconPack: 'fas',
 		                    onConfirm: () => superagent
-								.delete('/fttc')
+								.delete('./fttc')
 								.query(this.query)
 								.end((err, res) => {
 									if (err)
